added block header

--- a/index.html
+++ b/index.html
@@ -9,9 +9,65 @@
 </head>
 
 <body>
-    <!-- Здесь будет структура документа -->
-    
+    <header class="header">
+        <div class="header-top">
+            <nav>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Shop</a></li>
+                    <li><a href="">Story</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Testimonials</a></li>
+                </ul>
+            </nav>
+            <a class="logo" href="">
+                <img src="" alt="">
+            </a>
+            <div class="user-icons">
+                <ul>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                        <span>0</span>
+                    </li>
+                </ul>
+            </div>
+            <div class="social-icons">
+                <ul>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                    <li>
+                        <a href=""><img src="" alt=""></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="header-content">
+            <button>Shop Now</button>
+        </div>
+    </header>
+
+    <section class="smoothies"></section>
+    <section class="about"></section>
+    <section class="products"></section>
+    <section class="story"></section>
+    <section class="testimonials"></section>
+    <section class="blog"></section>
+    <section class="instagram"></section>
+    <footer class="footer"></footer>
+
+
 </body>
 
 </html>
-
