added block smoothies

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header">
         <div class="header-top">
-            <nav>
+            <nav class="navigation">
                 <ul>
                     <li><a href="">Home</a></li>
                     <li><a href="">Shop</a></li>
@@ -21,7 +21,7 @@
                     <li><a href="">Testimonials</a></li>
                 </ul>
             </nav>
-            <a class="logo" href="">
+            <a class="logo" href="#">
                 <img src="" alt="">
             </a>
             <div class="user-icons">
@@ -51,14 +51,50 @@
                     </li>
                 </ul>
             </div>
+            <h1>Fresh foods shop</h1>
         </div>
-
         <div class="header-content">
-            <button>Shop Now</button>
+            <a href="">Shop Now</a>
         </div>
     </header>
-
-    <section class="smoothies"></section>
+    <section class="smoothies">
+        <h2>What are these smoothies?</h2>
+        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+        <div class="features">
+            <div>
+                <img src="" alt="">
+                <h3>Plant Based</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Vegan</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Paleo</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Gluten-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Corn-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Soy-Free</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Ayurvedic</h3>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h3>Made With Love</h3>
+            </div>
+        </div>
+    </section>
     <section class="about"></section>
     <section class="products"></section>
     <section class="story"></section>
