--- a/index.html
+++ b/index.html
@@ -95,7 +95,23 @@
             </div>
         </div>
     </section>
-    <section class="about"></section>
+    <section class="about">
+        <div><img src="" alt=""></div>
+        <div>
+            <h2>What makes Smoothie an awesome drink?</h2>
+            <ul>
+                <li>Crunchy Puffs Texture</li>
+                <li>100 Calories per drink</li>
+                <li>4g Plant Protein</li>
+                <li>Good source of Magnesium & Vitamin B6</li>
+                <li>No Sugar in our Savory Flavors</li>
+                <li>Non-GMO, Vegan & Paleo</li>
+                <li>Gluten-Free & Grain-Free</li>
+                <li>Corn-Free & Soy-Free</li>
+            </ul>
+            <a href="">About Organic Smoothie</a>
+        </div>
+    </section>
     <section class="products"></section>
     <section class="story"></section>
     <section class="testimonials"></section>
