added block products

--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@
     </header>
     <section class="smoothies">
         <h2>What are these smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt, ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
+        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
+            ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such
+            as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
+            milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
         <div class="features">
             <div>
                 <img src="" alt="">
@@ -112,7 +115,32 @@
             <a href="">About Organic Smoothie</a>
         </div>
     </section>
-    <section class="products"></section>
+    <section class="products">
+        <div>
+            <img src="" alt="">
+            <h3>Dark Chocolate Smoothie</h3>
+            <span>100 ml</span>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Vegan Lettuce Smoothie</h3>
+            <span>100 ml</span>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Lemon Ginger Smoothie</h3>
+            <span>100 ml</span>
+            <a href="">Buy</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <h3>Turmeric Garlic Smoothie</h3>
+            <span>100 ml</span>
+            <a href="">Buy</a>
+        </div>
+    </section>
     <section class="story"></section>
     <section class="testimonials"></section>
     <section class="blog"></section>
