--- a/index.html
+++ b/index.html
@@ -141,7 +141,18 @@
             <a href="">Buy</a>
         </div>
     </section>
-    <section class="story"></section>
+    <section class="story">
+        <div>
+            <h2>Our story</h2>
+            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
+                and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
+            <a href="">Who we are</a>
+        </div>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
     <section class="testimonials"></section>
     <section class="blog"></section>
     <section class="instagram"></section>
