added block testimonials

--- a/index.html
+++ b/index.html
@@ -153,7 +153,18 @@
             <img src="" alt="">
         </div>
     </section>
-    <section class="testimonials"></section>
+    <section class="testimonials">
+        <h2>Why clients LOVE us?</h2>
+        <div>Sarah A</div>
+        <div>
+            <q>Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really make use of Smoothie! Smoothie saved my business.</q>
+            <span>- from Santa Monica, CA</span>
+            <img src="" alt="">
+        </div>
+        <img class="dots" src="" alt="">
+        <button>Вперед</button>
+        <button>Назад</button>
+    </section>
     <section class="blog"></section>
     <section class="instagram"></section>
     <footer class="footer"></footer>
