--- a/index.html
+++ b/index.html
@@ -183,7 +183,18 @@
             </article>
         </div>
     </section>
-    <section class="instagram"></section>
+    <section class="instagram">
+        <img src="" alt="">
+        <h3>ashasuperfoods</h3>
+        <div>
+            <div><img src="" alt=""><img src="" alt=""></div>
+            <div><img src="" alt=""><img src="" alt=""></div>
+            <div><img src="" alt=""><img src="" alt=""></div>
+            <div><img src="" alt=""><img src="" alt=""></div>
+            <div><img src="" alt=""><img src="" alt=""></div>
+        </div>
+
+    </section>
     <footer class="footer"></footer>
 
 
