added block footer

--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
             <img src="" alt="">
         </div>
         <img class="dots" src="" alt="">
-        <button>Вперед</button>
-        <button>Назад</button>
+        <button>Forward</button>
+        <button>Back</button>
     </section>
     <section class="blog">
         <div>
@@ -187,17 +187,86 @@
         <img src="" alt="">
         <h3>ashasuperfoods</h3>
         <div>
-            <div><img src="" alt=""><img src="" alt=""></div>
-            <div><img src="" alt=""><img src="" alt=""></div>
-            <div><img src="" alt=""><img src="" alt=""></div>
-            <div><img src="" alt=""><img src="" alt=""></div>
-            <div><img src="" alt=""><img src="" alt=""></div>
+            <div>
+                <img src="" alt="">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
+            <div>
+                <img src="" alt="">
+                <a href="">
+                    <img src="" alt="">
+                </a>
+            </div>
         </div>
-
     </section>
-    <footer class="footer"></footer>
-
-
+    <footer class="footer">
+        <div class="footer-top">
+            <a class="logo" href="">
+                <img src="" alt="">
+            </a>
+            <div class="info">
+                <h3>Information</h3>
+                <ul>
+                    <li><a href="">Search</a></li>
+                    <li><a href="">Contact us</a></li>
+                    <li><a href="">Terms & Conditions</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="payment">
+                <h3>Payment</h3>
+                <div>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="news">
+                <h3>Don’t miss out!</h3>
+                <img src="" alt="">
+                <input type="email" placeholder="Subscribe to our newsletter">
+                <div>
+                    <img src="" alt="">
+                    <span>Follow Us</span>
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                </div>
+            </div>
+        </div>
+        <div class="copyright">
+            <span>2020. All Rights Reserved.</span>
+            <span>Go top</span>
+            <button>Up</button>
+        </div>
+    </footer>
 </body>
 
 </html>
