added classes for the block smoothies

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </li>
                 </ul>
             </div>
-            <h1 class="header__h1">Fresh foods shop</h1>
+            <h1 class="header__title">Fresh foods shop</h1>
         </div>
         <div class="header__content">
             <a class="header__button btn btn_green_big" href="">Shop Now
@@ -81,43 +81,44 @@
         </div>
     </header>
     <section class="smoothies">
-        <h2>What are these smoothies?</h2>
-        <p>A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy products (milk, yogurt,
+        <h2 class="smoothies__title">What are these smoothies?</h2>
+        <p class="smoothies__text">A smoothie is a drink made from pureed raw fruit, vegetables, and sometimes dairy
+            products (milk, yogurt,
             ice-cream or cottage cheese), typically using a blender. Smoothies may be made using other ingredients, such
             as water, crushed ice, fruit juice, sweeteners (e.g. honey, sugar, stevia, or syrup), whey powder, plant
             milk, nuts, nut butter, seeds, tea, chocolate, herbal supplements, or nutritional supplements.</p>
-        <div class="features">
-            <div>
-                <img src="" alt="">
-                <h3>Plant Based</h3>
+        <div class="smoothies__features">
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Plant Based</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Vegan</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Vegan</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Paleo</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Paleo</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Gluten-Free</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Gluten-Free</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Corn-Free</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Corn-Free</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Soy-Free</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Soy-Free</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Ayurvedic</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Ayurvedic</h3>
             </div>
-            <div>
-                <img src="" alt="">
-                <h3>Made With Love</h3>
+            <div class="smoothies__features-item features-item">
+                <img class="features-item__img" src="" alt="">
+                <h3 class="features-item__title">Made With Love</h3>
             </div>
         </div>
     </section>
