added classes for the block about

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="header__content">
             <a class="header__button btn btn_green_big" href="">Shop Now
-                <img class="btn__img" src="" alt="">
+                <img class="btn__arrow-yellow" src="" alt="">
             </a>
         </div>
     </header>
@@ -123,20 +123,24 @@
         </div>
     </section>
     <section class="about">
-        <div><img src="" alt=""></div>
-        <div>
-            <h2>What makes Smoothie an awesome drink?</h2>
-            <ul>
-                <li>Crunchy Puffs Texture</li>
-                <li>100 Calories per drink</li>
-                <li>4g Plant Protein</li>
-                <li>Good source of Magnesium & Vitamin B6</li>
-                <li>No Sugar in our Savory Flavors</li>
-                <li>Non-GMO, Vegan & Paleo</li>
-                <li>Gluten-Free & Grain-Free</li>
-                <li>Corn-Free & Soy-Free</li>
+        <div class="about__box-left">
+            <img class="about__img" src="" alt="">
+        </div>
+        <div class="about__box-right">
+            <h2 class="about__title">What makes Smoothie an awesome drink?</h2>
+            <ul class="about__list">
+                <li class="about__list-item">Crunchy Puffs Texture</li>
+                <li class="about__list-item">100 Calories per drink</li>
+                <li class="about__list-item">4g Plant Protein</li>
+                <li class="about__list-item">Good source of Magnesium & Vitamin B6</li>
+                <li class="about__list-item">No Sugar in our Savory Flavors</li>
+                <li class="about__list-item">Non-GMO, Vegan & Paleo</li>
+                <li class="about__list-item">Gluten-Free & Grain-Free</li>
+                <li class="about__list-item">Corn-Free & Soy-Free</li>
             </ul>
-            <a href="">About Organic Smoothie</a>
+            <a class="about__button btn btn_border_yellow" href="">About Organic Smoothie
+                <img class="btn__arrow-yellow" src="" alt="">
+            </a>
         </div>
     </section>
     <section class="products">
