added classes for the block products

--- a/index.html
+++ b/index.html
@@ -144,29 +144,37 @@
         </div>
     </section>
     <section class="products">
-        <div>
-            <img src="" alt="">
-            <h3>Dark Chocolate Smoothie</h3>
-            <span>100 ml</span>
-            <a href="">Buy</a>
+        <div class="products__item">
+            <img class="products__img" src="" alt="">
+            <h3 class="products__title">Dark Chocolate Smoothie</h3>
+            <span class="products__volume">100 ml</span>
+            <a class="products__button btn btn_border_white" href="">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </a>
         </div>
-        <div>
-            <img src="" alt="">
-            <h3>Vegan Lettuce Smoothie</h3>
-            <span>100 ml</span>
-            <a href="">Buy</a>
+        <div class="products__item">
+            <img class="products__img" src="" alt="">
+            <h3 class="products__title">Vegan Lettuce Smoothie</h3>
+            <span class="products__volume">100 ml</span>
+            <a class="products__button btn btn_border_white" href="">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </a>
         </div>
-        <div>
-            <img src="" alt="">
-            <h3>Lemon Ginger Smoothie</h3>
-            <span>100 ml</span>
-            <a href="">Buy</a>
+        <div class="products__item">
+            <img class="products__img" src="" alt="">
+            <h3 class="products__title">Lemon Ginger Smoothie</h3>
+            <span class="products__volume">100 ml</span>
+            <a class="products__button btn btn_border_white" href="">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </a>
         </div>
-        <div>
-            <img src="" alt="">
-            <h3>Turmeric Garlic Smoothie</h3>
-            <span>100 ml</span>
-            <a href="">Buy</a>
+        <div class="products__item">
+            <img class="products__img" src="" alt="">
+            <h3 class="products__title">Turmeric Garlic Smoothie</h3>
+            <span class="products__volume">100 ml</span>
+            <a class="products__button btn btn_border_white" href="">Buy
+                <img class="btn__arrow-white" src="" alt="">
+            </a>
         </div>
     </section>
     <section class="story">
