added classes for the block story

--- a/index.html
+++ b/index.html
@@ -178,15 +178,18 @@
         </div>
     </section>
     <section class="story">
-        <div>
-            <h2>Our story</h2>
-            <p>As products typically using raw fruits or vegetables, smoothies include dietary fiber (e.g. pulp, skin,
+        <div class="story__box-left">
+            <h2 class="story__title">Our story</h2>
+            <p class="story__text">As products typically using raw fruits or vegetables, smoothies include dietary fiber
+                (e.g. pulp, skin,
                 and seeds) and so are thicker than fruit juice, often with a consistency similar to a milkshake.</p>
-            <a href="">Who we are</a>
+            <a class="story__button btn btn_green_small" href="">Who we are
+                <img class="btn__arrow-yellow" src="" alt="">
+            </a>
         </div>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
+        <div class="story__box-right">
+            <img class="story__img-big" src="" alt="">
+            <img class="story__img-small" src="" alt="">
         </div>
     </section>
     <section class="testimonials">
