added classes for the block testimonials

--- a/index.html
+++ b/index.html
@@ -193,17 +193,22 @@
         </div>
     </section>
     <section class="testimonials">
-        <h2>Why clients LOVE us?</h2>
-        <div>Sarah A</div>
-        <div>
-            <q>Smoothie is great. I don't know what else to say. I will let my mum know about this, she could really
+        <h2 class="testimonials__title">Why clients LOVE us?</h2>
+        <div class="testimonials__name">Sarah A</div>
+        <div class="testimonials__box">
+            <q class="testimonials__text">Smoothie is great. I don't know what else to say. I will let my mum know about
+                this, she could really
                 make use of Smoothie! Smoothie saved my business.</q>
-            <cite>- from Santa Monica, CA</cite>
-            <img src="" alt="">
+            <cite class="testimonials__sity">- from Santa Monica, CA</cite>
+            <img class="testimonials__avatar" src="" alt="">
         </div>
-        <div>
-            <button>Forward</button>
-            <button>Back</button>
+        <div class="testimonials__control">
+            <button class="testimonials__btn-forward">
+                <img class="testimonials__btn-arrow" src="" alt="Forward">
+            </button>
+            <button class="testimonials__btn-back">
+                <img class="testimonials__btn-arrow" src="" alt="Back">
+            </button>
         </div>
     </section>
     <section class="blog">
