added classes for the block instagram

--- a/index.html
+++ b/index.html
@@ -231,15 +231,14 @@
         </div>
     </section>
     <section class="instagram">
-        <img src="" alt="">
-        <h3>ashasuperfoods</h3>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <img class="instagram__icon" src="" alt="">
+        <h3 class="instagram__title">ashasuperfoods</h3>
+        <div class="instagram__gallery">
+            <img class="instagram__img" src="" alt="">
+            <img class="instagram__img" src="" alt="">
+            <img class="instagram__img" src="" alt="">
+            <img class="instagram__img" src="" alt="">
+            <img class="instagram__img" src="" alt="">
         </div>
     </section>
     <footer class="footer">
