added classes for the footer

--- a/index.html
+++ b/index.html
@@ -56,19 +56,22 @@
                     </li>
                 </ul>
             </div>
-            <div class="header__social social">
-                <ul class="social__list">
-                    <li class="social__list-item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt=""></a>
+            <div class="header__social">
+                <ul class="header__socials-list">
+                    <li class="header__socials-item">
+                        <a class="header__socials-link" href="">
+                            <img class="header__socials-icon" src="" alt="">
+                        </a>
                     </li>
-                    <li class="social__list-item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt=""></a>
+                    <li class="header__socials-item">
+                        <a class="header__socials-link" href="">
+                            <img class="header__socials-icon" src="" alt="">
+                        </a>
                     </li>
-                    <li class="social__list-item">
-                        <a class="social__link" href="">
-                            <img class="social__icon" src="" alt=""></a>
+                    <li class="header__socials-item">
+                        <a class="header__socials-link" href="">
+                            <img class="header__socials-icon" src="" alt="">
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -242,52 +245,72 @@
         </div>
     </section>
     <footer class="footer">
-        <div class="footer-top">
-            <a class="logo" href="">
-                <img src="" alt="">
-            </a>
-            <div class="info">
-                <h3>Information</h3>
-                <ul>
-                    <li><a href="">Search</a></li>
-                    <li><a href="">Contact us</a></li>
-                    <li><a href="">Terms & Conditions</a></li>
-                    <li><a href="">Privacy Policy</a></li>
+        <div class="footer__top">
+            <div class="footer__logo logo">
+                <a class="logo__link" href="#">
+                    <img class="logo__img" src="" alt="">
+                </a>
+            </div>
+            <div class="footer__info info">
+                <h3 class="info__title">Information</h3>
+                <ul class="info__list">
+                    <li class="info__list-item">
+                        <a class="info__link" href="">Search</a>
+                    </li>
+                    <li class="info__list-item">
+                        <a class="info__link" href="">Contact us</a>
+                    </li>
+                    <li class="info__list-item">
+                        <a class="info__link" href="">Terms & Conditions</a>
+                    </li>
+                    <li class="info__list-item">
+                        <a class="info__link" href="">Privacy Policy</a>
+                    </li>
                 </ul>
             </div>
-            <div class="payment">
-                <h3>Payment</h3>
-                <div>
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+            <div class="footer__payment payment">
+                <h3 class="payment__title">Payment</h3>
+                <div class="payment__box">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
+                    <img class="payment__icon" src="" alt="">
                 </div>
             </div>
-            <div class="news">
-                <h3>Don’t miss out!</h3>
-                <img src="" alt="">
-                <input type="email" placeholder="Subscribe to our newsletter">
-                <div>
-                    <span>Follow Us</span>
-                    <div>
-                        <img src="" alt="">
-                        <img src="" alt="">
-                        <img src="" alt="">
-                    </div>
+            <div class="footer__news news">
+                <h3 class="news__title">Don’t miss out!</h3>
+                <input class="news__email" type="email" placeholder="Subscribe to our newsletter">
+                <div class="news__socials">
+                    <span class="news__slogan">Follow Us</span>
+                    <ul class="news__socials-list">
+                        <li class="news__socials-item">
+                            <a class="news__socials-link" href="">
+                                <img class="news__socials-icon" src="" alt="">
+                            </a>
+                        <li class="news__socials-item">
+                            <a class="news__socials-link" href="">
+                                <img class="news__socials-icon" src="" alt="">
+                            </a>
+                        <li class="news__socials-item">
+                            <a class="news__socials-link" href="">
+                                <img class="news__socials-icon" src="" alt="">
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-        <div class="copyright">
-            <span>2020. All Rights Reserved.</span>
-            <span>Go top</span>
-            <button>Up</button>
+        <div class="footer__copyright copyright">
+            <span class="copyright__text">2020. All Rights Reserved.</span>
+            <span class="copyright__scroll-text">Go top</span>
+            <button class="copyright__btn-scroll">
+                <img class="copyright__arrow" src="" alt="Up">
+            </button>
         </div>
     </footer>
 </body>
